--- a/src/css/style.css
+++ b/src/css/style.css
@@ -8,9 +8,56 @@ html, body {
   background: #000;
 }
 
+.login {
+  max-width: 1024px;
+  margin: 0 auto;
+  width: 100%;
+
+  text-align: center;
+}
+
+.login__h1 {
+  margin: 0;
+
+  font-size: 24px;
+  line-height: 1.2;
+
+  color: white;
+}
+
+.login__h2 {
+  margin: 0 0 20px;
+
+  font-size: 20px;
+  line-height: 1.2;
+
+  color: white;
+}
+
+.login__form {
+  text-align: center;
+}
+
+.login__form .form__group {
+  margin-bottom: 20px;
+}
+
+.login__form-input {
+  height: 20px;
+  width: 200px;
+  padding: 10px;
+}
+
+.login__form-btn {
+  width: 200px;
+  padding: 10px;
+}
+
 .app {
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
   width: 100%;
   height: 100%;
   max-width: 1024px;
@@ -20,8 +67,10 @@ html, body {
 
 .header {
   display: flex;
+  width: 100%;
   height: 60px;
   padding: 0 10px;
+  box-sizing: border-box;
   gap: 15px;
 
   background: #eee;
@@ -101,12 +150,14 @@ html, body {
 .content {
   display: flex;
   flex-grow: 1;
+  width: 100%;
 
   background: white;
 }
 
 .footer {
   display: flex;
+  width: 100%;
   height: 100px;
   padding: 0 20px;
   box-sizing: border-box;
