Отрисовал вывод различных типов файлов. Сделал возможность скачать файлы.

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -283,6 +283,10 @@ html, body {
   cursor: pointer;
 }
 
-.filesUploadList__item {
+.filesUploadList__item-image {
+  width: 100%;
+}
+
+.filesUploadList__item-link {
   display: block;
 }
